MG-FEAT-MVP:1.0.0-Se realizan funcionalidades solicitadas