@@ -10,7 +10,13 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import com.pokeapi.infrastructure.adapter.rest.dto.HeldItemWrapper;
+import com.pokeapi.infrastructure.adapter.rest.dto.HeldItemWrapper.ItemWrapper;
+import com.pokeapi.domain.model.HeldItem;
+import com.pokeapi.domain.model.Item;
 
 @Component
 public class PokeApiAdapter implements PokemonRepository {
@@ -23,31 +29,47 @@ public class PokeApiAdapter implements PokemonRepository {
         this.baseUrl = baseUrl;
     }
 
+    private List<HeldItem> mapHeldItems(List<HeldItemWrapper> wrappers) {
+        if (wrappers == null) return List.of();
+        return wrappers.stream()
+            .map(w -> {
+                var iw = (w == null) ? null : w.getItem();
+                var domainItem = (iw == null) ? null
+                    : Item.builder()
+                        .name(iw.getName())
+                        .url(iw.getUrl())
+                        .build();
+                return HeldItem.builder().item(domainItem).build();
+            })
+            .toList();
+    }
+
     @Override
     public Pokemon findByName(String name) {
         try {
-            PokemonResponse response = restTemplate.getForObject(
+            var response = restTemplate.getForObject(
                 baseUrl + "/pokemon/{name}",
                 PokemonResponse.class,
                 name.toLowerCase()
             );
 
-            if (response == null) {
-                throw new PokemonNotFoundException(name);
-            }
+            var resp = Optional.ofNullable(response).orElseThrow(() -> new PokemonNotFoundException(name));
 
-            return new Pokemon(
-                response.getId(),
-                response.getName(),
-                response.getBaseExperience(),
-                response.getHeight(),
-                response.getAbilities().stream()
-                    .map(ability -> ability.getAbility().getName())
-                    .collect(Collectors.toList()),
-                response.getStats().stream()
-                    .map(PokemonResponse.StatWrapper::getBaseStat)
-                    .collect(Collectors.toList())
-            );
+            var id = Optional.ofNullable(resp.getId()).map(Integer::longValue).orElse(null);
+            var abilities = Optional.ofNullable(resp.getAbilities())
+                .stream()
+                .flatMap(List::stream)
+                .map(a -> a.getAbility().getName())
+                .toList();
+
+            return Pokemon.builder()
+                .id(id)
+                .name(resp.getName())
+                .baseExperience(resp.getBaseExperience())
+                .abilities(abilities)
+                .heldItems(mapHeldItems(resp.getHeldItems()))
+                .locationAreaEncounters(resp.getLocationAreaEncounters())
+                .build();
         } catch (HttpClientErrorException.NotFound e) {
             throw new PokemonNotFoundException(name);
         } catch (Exception e) {
